Redo button creation method, add a new button, and remove static MainCharacter fields.

--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -2,3 +2,7 @@ missingCoins = Pas assez d'or pour acheter:
 speedMax = Votre vitesse est au maximum.
 coinCount = Or Totale: 
 name = Nom: 
+speedUp = Vitesse augmente par 1.
+speedUpMsg = Vitesse +1
+coinWorthUp = La valeure d'or augmente par 1.
+coinWorthUpMsg = Valeur d'Or +1
