--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -2,3 +2,7 @@ missingCoins = Not enough coins to buy this:
 speedMax = Speed is already at the max.
 coinCount = Coins: 
 name = Name: 
+speedUp = Speed up by 1.
+speedUpMsg = Speed +1
+coinWorthUp = Coin worth up by 1.
+coinWorthUpMsg = Coin Worth +1
