added clue translation

--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -6,3 +6,6 @@ speedUp = Vitesse augmente par 1.
 speedUpMsg = Vitesse +1
 coinWorthUp = La valeure d'or augmente par 1.
 coinWorthUpMsg = Valeur d'Or +1
+cToClose = C pour fermer.
+bushClue = Quelqu'un semble avoir manque d'encre \n en dessinant le buisson près \n de la bibliotheque de Bishop's.
+noiseClue = Un bruit bizarre s'est fait \n entendre au batiment Hamilton.
