--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -6,3 +6,6 @@ speedUp = Speed up by 1.
 speedUpMsg = Speed +1
 coinWorthUp = Coin worth up by 1.
 coinWorthUpMsg = Coin Worth +1
+cToClose= Press C to close
+bushClue = It looks like some one ran out of ink trying \n to draw the bush near Bishop's library.
+noiseClue = A strange noise was heard \n near Hamilton Building.
