Fixed problem with localization

--- a/src/StartMain/MessagesBundle.properties
+++ b/src/StartMain/MessagesBundle.properties
@@ -6,3 +6,4 @@ speedUp = Speed up by 1.
 speedUpMsg = Speed +1
 coinWorthUp = Coin worth up by 1.
 coinWorthUpMsg = Coin Worth +1
+quitMenu = Quit the Game?
