Add TextBox for NPCs and implement an NPC that uses it.

--- a/src/StartMain/MessagesBundle.properties
+++ b/src/StartMain/MessagesBundle.properties
@@ -6,4 +6,10 @@ speedUp = Speed up by 1.
 speedUpMsg = Speed +1
 coinWorthUp = Coin worth up by 1.
 coinWorthUpMsg = Coin Worth +1
+cToClose= Press C to close
+bushClue = It looks like some one ran out of ink trying \n to draw the bush near Bishop's library.
+noiseClue = A strange noise was heard \n near Hamilton Building.
 quitMenu = Quit the Game?
+thing2page1line1 = Hello, my name is Thing Two!
+thing2page1line2 = Welcome to Treasure Trails, good luck!
+space = [ Space ]
