--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -10,3 +10,6 @@ cToClose = C pour fermer.
 bushClue = Quelqu'un semble avoir manqué d'encre \n en dessinant le buisson près \n de la bibliotheque de Bishop's.
 noiseClue = Un bruit bizarre s'est fait \n entendre au batiment Hamilton.
 quitMenu = Quittez le jeu?
+thing2page1line1 = Bonjour, mon nom est Chose Deux!
+thing2page1line2 = Bienvenue à Treasure Trails, bonne chance!
+space = [ Espace ]
