--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -10,3 +10,6 @@ cToClose= Press C to close
 bushClue = It looks like some one ran out of ink trying \n to draw the bush near Bishop's library.
 noiseClue = A strange noise was heard \n near Hamilton Building.
 quitMenu = Quit the Game?
+thing2page1line1 = Hello, my name is Thing Two!
+thing2page1line2 = Welcome to Treasure Trails, good luck!
+space = [ Space ]
