added 8 clues for a total of 10

--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -9,6 +9,14 @@ coinWorthUpMsg = Coin Worth +1
 cToClose= Press C to close
 bushClue = It looks like some one ran out of ink trying \n to draw the bush near Bishop's library.
 noiseClue = A strange noise was heard \n near Hamilton Building.
+hamiltonClue = You should take a look under the gazebo.\n By the way you can press H for help.
+gazeboClue = Nicolls building looks suspicious...
+nicollsClue=McGreer Hall is always the \n best place to get information.
+mcgreerClue=What about the church?
+churchClue=The next clue is in the\n forest south of the church.
+forestClue=You should take a look\n in the parking behind the library.
+liblaryParkingClue=Or is it another parking?
+swParkingClue= The suspect has a black beard.\n Go to the building where his office is.
 quitMenu = Quit the Game?
 thing2page1line1 = Hello, my name is Thing Two!
 thing2page1line2 = Welcome to Treasure Trails, good luck!
