--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -9,6 +9,14 @@ coinWorthUpMsg = Valeur d'Or +1
 cToClose = C pour fermer.
 bushClue = Quelqu'un semble avoir manqué d'encre \n en dessinant le buisson près \n de la bibliotheque de Bishop's.
 noiseClue = Un bruit bizarre s'est fait \n entendre au batiment Hamilton.
+hamiltonClue = Vous devriez regarder sour le gazebo.\n En passant, pesez sur H pour de l'aide.
+gazeboClue= Le batiment Nicolls me semble suspect...
+nicollsClue=McGreer Hall est le meilleur \n endroit pour avoir des indices.
+mcgreerClue=Et l'eglise elle?
+churchClue=Le prochain indice est dans la foret au sud de l'eglise.
+forestClue=Vous devriez regarder dans\n le stationnement derriere la bibliotheque.
+liblaryParkingClue=Ou peut-etre est-ce un autre stationnement?
+swParkingClue=Le suspect a une barbe noire. \n Allez au batiment de son bureau.
 quitMenu = Quittez le jeu?
 thing2page1line1 = Bonjour, mon nom est Chose Deux!
 thing2page1line2 = Bienvenue à Treasure Trails, bonne chance!
