npc being implemented

--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -9,7 +9,7 @@ coinWorthUpMsg = Valeur d'Or +1
 cToClose = C pour fermer.
 bushClue = Quelqu'un semble avoir manqué d'encre \n en dessinant le buisson près \n de la bibliotheque de Bishop's.
 noiseClue = Un bruit bizarre s'est fait \n entendre au batiment Hamilton.
-hamiltonClue = Vous devriez regarder sour le gazebo.\n En passant, pesez sur H pour de l'aide.
+hamiltonClue = Vous devriez regarder sour le gazebo.
 gazeboClue= Le batiment Nicolls me semble suspect...
 nicollsClue=McGreer Hall est le meilleur \n endroit pour avoir des indices.
 mcgreerClue=Et l'eglise elle?
@@ -18,6 +18,14 @@ forestClue=Vous devriez regarder dans\n le stationnement derriere la bibliothequ
 liblaryParkingClue=Ou peut-etre est-ce un autre stationnement?
 swParkingClue=Le suspect a une barbe noire. \n Allez au batiment de son bureau.
 quitMenu = Quittez le jeu?
-thing2page1line1 = Bonjour, mon nom est Chose Deux!
-thing2page1line2 = Bienvenue à Treasure Trails, bonne chance!
+thing2page1line1 = Bonjour, c'est moi, Nelly Khouzam.
+thing2page1line2 = Je dois donner un cours, mais il n'y
+thing2page1line3 = avait pas de marqueur dans la classe.
+thing2page1line4 = Mes élèves m'attendent,
+thing2page1line5 = je dois le trouver rapidement !
+thing2page1line6 = Pouvez-vous le trouver pour moi 
+thing2page1line7 = s'il vous plait ? Ce serait
+thing2page1line8 = très gentil !
+thing2page1line9 = Vous pouvez peser sur H à tout moment pour de l'aide!
+thing2page1line10 = Bonne chance!
 space = [ Espace ]
