--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -9,7 +9,7 @@ coinWorthUpMsg = Coin Worth +1
 cToClose= Press C to close
 bushClue = It looks like some one ran out of ink trying \n to draw the bush near Bishop's library.
 noiseClue = A strange noise was heard \n near Hamilton Building.
-hamiltonClue = You should take a look under the gazebo.\n By the way you can press H for help.
+hamiltonClue = You should take a look under the gazebo.
 gazeboClue = Nicolls building looks suspicious...
 nicollsClue=McGreer Hall is always the \n best place to get information.
 mcgreerClue=What about the church?
@@ -18,6 +18,14 @@ forestClue=You should take a look\n in the parking behind the library.
 liblaryParkingClue=Or is it another parking?
 swParkingClue= The suspect has a black beard.\n Go to the building where his office is.
 quitMenu = Quit the Game?
-thing2page1line1 = Hello, my name is Thing Two!
-thing2page1line2 = Welcome to Treasure Trails, good luck!
+thing2page1line1 = Hello, it's me, Nelly Khouzam.
+thing2page1line2 = I need to give a class, but there
+thing2page1line3 = was not marker in the class.
+thing2page1line4 = My students are waiting for me,
+thing2page1line5 = I need to find the marker quickly !
+thing2page1line6 = Can you help me find it  
+thing2page1line7 = please ? It would be
+thing2page1line8 = really appreciated !
+thing2page1line9 = You can press H at anytime for help!
+thing2page1line10 = Good luck!
 space = [ Space ]
