nelly now gives the context

--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -20,12 +20,11 @@ swParkingClue= The suspect has a black beard.\n Go to the building where his off
 quitMenu = Quit the Game?
 thing2page1line1 = Hello, it's me, Nelly Khouzam.
 thing2page1line2 = I need to give a class, but there
-thing2page1line3 = was not marker in the class.
+thing2page1line3 = was not marker on the board.
 thing2page1line4 = My students are waiting for me,
 thing2page1line5 = I need to find the marker quickly !
-thing2page1line6 = Can you help me find it  
-thing2page1line7 = please ? It would be
-thing2page1line8 = really appreciated !
-thing2page1line9 = You can press H at anytime for help!
-thing2page1line10 = Good luck!
+thing2page1line6 = Can you help me find it please ?
+thing2page1line7 =  It would be really appreciated !
+thing2page1line8 = You can press H at anytime for help!
+thing2page1line9 = Good luck!
 space = [ Space ]
