--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -24,8 +24,7 @@ thing2page1line3 = avait pas de marqueur dans la classe.
 thing2page1line4 = Mes élèves m'attendent,
 thing2page1line5 = je dois le trouver rapidement !
 thing2page1line6 = Pouvez-vous le trouver pour moi 
-thing2page1line7 = s'il vous plait ? Ce serait
-thing2page1line8 = très gentil !
-thing2page1line9 = Vous pouvez peser sur H à tout moment pour de l'aide!
-thing2page1line10 = Bonne chance!
+thing2page1line7 = s'il vous plait ? Ce serait très gentil !
+thing2page1line8 = Vous pouvez peser sur H à tout moment pour de l'aide!
+thing2page1line9 = Bonne chance!
 space = [ Espace ]
