--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -19,8 +19,8 @@ liblaryParkingClue=Or is it another parking?
 swParkingClue= The suspect has a black beard.\n Go to the building where his office is.
 quitMenu = Quit the Game?
 thing2page1line1 = Hello, it's me, Nelly Khouzam.
-thing2page1line2 = I need to give a class, but there
-thing2page1line3 = was not marker on the board.
+thing2page1line2 = I need to give a class, but 
+thing2page1line3 = the marker was missing!
 thing2page1line4 = My students are waiting for me,
 thing2page1line5 = I need to find the marker quickly !
 thing2page1line6 = Can you help me find it please ?
