fixed textboxpage bug

--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -13,9 +13,9 @@ hamiltonClue = Vous devriez regarder sour le gazebo.
 gazeboClue= Le batiment Nicolls me semble suspect...
 nicollsClue=McGreer Hall est le meilleur \n endroit pour avoir des indices.
 mcgreerClue=Et l'eglise elle?
-churchClue=Le prochain indice est dans la foret au sud de l'eglise.
+churchClue=Le prochain indice est dans\n la foret au sud de l'eglise.
 forestClue=Vous devriez regarder dans\n le stationnement derriere la bibliotheque.
-liblaryParkingClue=Ou peut-etre est-ce un autre stationnement?
+liblaryParkingClue=Ou peut-etre est-ce\n un autre stationnement?
 swParkingClue=Le suspect a une barbe noire. \n Allez au batiment de son bureau.
 quitMenu = Quittez le jeu?
 thing2page1line1 = Bonjour, c'est moi, Nelly Khouzam.
