added layachi ending

--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -16,7 +16,7 @@ mcgreerClue=What about the church?
 churchClue=The next clue is in the\n forest south of the church.
 forestClue=You should take a look\n in the parking behind the library.
 liblaryParkingClue=Or is it another parking?
-swParkingClue= The suspect has a black beard.\n Go to the building where his office is.
+swParkingClue= The suspect has a black beard.\n You should go talk to him.
 quitMenu = Quit the Game?
 thing2page1line1 = Hello, it's me, Nelly Khouzam.
 thing2page1line2 = I need to give a class, but 
@@ -27,4 +27,11 @@ thing2page1line6 = Can you help me find it please ?
 thing2page1line7 =  It would be really appreciated !
 thing2page1line8 = You can press H at anytime for help!
 thing2page1line9 = Good luck!
+layachiPage1Line1 = Wait... I think I have something
+layachiPage1Line2 = in my pockets. Oh! Look a marker!
+layachiPage1Line3 = Sorry, I forgot to put it back.
+layachiPage1Line4 = Thank you for making me notice!
+layachiPage2Line1 = I will bring it to Nelly.
+layachiPage2Line2 = Congratulations on solving the mystery!
+layachiPage2Line3 = The treasure trail is now finished.
 space = [ Space ]
