--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -16,7 +16,7 @@ mcgreerClue=Et l'eglise elle?
 churchClue=Le prochain indice est dans\n la foret au sud de l'eglise.
 forestClue=Vous devriez regarder dans\n le stationnement derriere la bibliotheque.
 liblaryParkingClue=Ou peut-etre est-ce\n un autre stationnement?
-swParkingClue=Le suspect a une barbe noire. \n Allez au batiment de son bureau.
+swParkingClue=Le suspect a une barbe noire. \n Vous devriez aller lui parler.
 quitMenu = Quittez le jeu?
 thing2page1line1 = Bonjour, c'est moi, Nelly Khouzam.
 thing2page1line2 = Je dois donner un cours, mais il n'y
@@ -27,4 +27,11 @@ thing2page1line6 = Pouvez-vous le trouver pour moi
 thing2page1line7 = s'il vous plait ? Ce serait très gentil !
 thing2page1line8 = Vous pouvez peser sur H à tout moment pour de l'aide!
 thing2page1line9 = Bonne chance!
+layachiPage1Line1 = Attends... je crois que j'ai quelque chose
+layachiPage1Line2 = dans mes poches. Oh ! regarde ! un marqueur !
+layachiPage1Line3 = Desole, j'ai oublie de le remettre à sa place,
+layachiPage1Line4 = merci de me l'avoir fait remarquer !
+layachiPage2Line1 = Je vais aller le donner à Nelly.
+layachiPage2Line2 = Felicitations pour avoir resolu le mystere !
+layachiPage2Line3 = La chasse au tresor est close.
 space = [ Espace ]
