fixed nelly mesage name

--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -18,15 +18,15 @@ forestClue=Vous devriez regarder dans\n le stationnement derriere la bibliothequ
 liblaryParkingClue=Ou peut-etre est-ce\n un autre stationnement?
 swParkingClue=Le suspect a une barbe noire. \n Vous devriez aller lui parler.
 quitMenu = Quittez le jeu?
-thing2page1line1 = Bonjour, c'est moi, Nelly Khouzam.
-thing2page1line2 = Je dois donner un cours, mais il n'y
-thing2page1line3 = avait pas de marqueur dans la classe.
-thing2page1line4 = Mes élèves m'attendent,
-thing2page1line5 = je dois le trouver rapidement !
-thing2page1line6 = Pouvez-vous le trouver pour moi 
-thing2page1line7 = s'il vous plait ? Ce serait très gentil !
-thing2page1line8 = Vous pouvez peser sur H à tout moment pour de l'aide!
-thing2page1line9 = Bonne chance!
+nellypage1line1 = Bonjour, c'est moi, Nelly Khouzam.
+nellypage1line2 = Je dois donner un cours, mais il n'y
+nellypage1line3 = avait pas de marqueur dans la classe.
+nellypage1line4 = Mes élèves m'attendent,
+nellypage1line5 = je dois le trouver rapidement !
+nellypage1line6 = Pouvez-vous le trouver pour moi 
+nellypage1line7 = s'il vous plait ? Ce serait très gentil !
+nellypage1line8 = Vous pouvez peser sur H à tout moment pour de l'aide!
+nellypage1line9 = Bonne chance!
 layachiPage1Line1 = Attends... je crois que j'ai quelque chose
 layachiPage1Line2 = dans mes poches. Oh ! regarde ! un marqueur !
 layachiPage1Line3 = Desole, j'ai oublie de le remettre à sa place,
