--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -18,15 +18,15 @@ forestClue=You should take a look\n in the parking behind the library.
 liblaryParkingClue=Or is it another parking?
 swParkingClue= The suspect has a black beard.\n You should go talk to him.
 quitMenu = Quit the Game?
-thing2page1line1 = Hello, it's me, Nelly Khouzam.
-thing2page1line2 = I need to give a class, but 
-thing2page1line3 = the marker was missing!
-thing2page1line4 = My students are waiting for me,
-thing2page1line5 = I need to find the marker quickly !
-thing2page1line6 = Can you help me find it please ?
-thing2page1line7 =  It would be really appreciated !
-thing2page1line8 = You can press H at anytime for help!
-thing2page1line9 = Good luck!
+nellypage1line1 = Hello, it's me, Nelly Khouzam.
+nellypage1line2 = I need to give a class, but 
+nellypage1line3 = the marker was missing!
+nellypage1line4 = My students are waiting for me,
+nellypage1line5 = I need to find the marker quickly !
+nellypage1line6 = Can you help me find it please ?
+nellypage1line7 =  It would be really appreciated !
+nellypage1line8 = You can press H at anytime for help!
+nellypage1line9 = Good luck!
 layachiPage1Line1 = Wait... I think I have something
 layachiPage1Line2 = in my pockets. Oh! Look a marker!
 layachiPage1Line3 = Sorry, I forgot to put it back.
