Fix NPC communication method and isCharacterNear. Add Layachi error text.

--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -26,7 +26,9 @@ nellypage1line5 = I need to find the marker quickly !
 nellypage1line6 = Can you help me find it please ?
 nellypage1line7 =  It would be really appreciated !
 nellypage1line8 = You can press H at anytime for help!
-nellypage1line9 = Good luck!
+nellypage1line9 = Press N to talk with me again, or any other
+nellypage1line10 = person also.
+nellypage1line11 = Good luck!
 layachiPage1Line1 = Wait... I think I have something
 layachiPage1Line2 = in my pockets. Oh! Look a marker!
 layachiPage1Line3 = Sorry, I forgot to put it back.
@@ -34,4 +36,6 @@ layachiPage1Line4 = Thank you for making me notice!
 layachiPage2Line1 = I will bring it to Nelly.
 layachiPage2Line2 = Congratulations on solving the mystery!
 layachiPage2Line3 = The treasure trail is now finished.
+needMoreClues1 = The bearded man will have more
+needMoreClues2 = to say later...
 space = [ Space ]
