--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -34,4 +34,6 @@ layachiPage1Line4 = merci de me l'avoir fait remarquer !
 layachiPage2Line1 = Je vais aller le donner à Nelly.
 layachiPage2Line2 = Felicitations pour avoir resolu le mystere !
 layachiPage2Line3 = La chasse au tresor est close.
+needMoreClues1 = L'homme avec une barbe noire aura
+needMoreClues2 = plus d'information plus tard.
 space = [ Espace ]
