Implement a congrats screen in english and french for finishing the game.

--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -26,7 +26,9 @@ nellypage1line5 = je dois le trouver rapidement !
 nellypage1line6 = Pouvez-vous le trouver pour moi 
 nellypage1line7 = s'il vous plait ? Ce serait très gentil !
 nellypage1line8 = Vous pouvez peser sur H à tout moment pour de l'aide!
-nellypage1line9 = Bonne chance!
+nellypage1line9 = Peser sur N pour parlez avec moi une autre fois,
+nellypage1line10 = ou avec les autres personnes.
+nellypage1line11 = Bonne chance!
 layachiPage1Line1 = Attends... je crois que j'ai quelque chose
 layachiPage1Line2 = dans mes poches. Oh ! regarde ! un marqueur !
 layachiPage1Line3 = Desole, j'ai oublie de le remettre à sa place,
