Update ShopMenu to use a more dynamic button creation method.

--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -1,11 +1,14 @@
 missingCoins = Not enough coins to buy this: 
 speedMax = Speed is already at the max.
+coinFreqMax = Coin spawn rate is already at the max.
 coinCount = Coins: 
 name = Name: 
 speedUp = Speed up by 1.
 speedUpMsg = Speed +1
 coinWorthUp = Coin worth up by 1.
 coinWorthUpMsg = Coin Worth +1
+coinFreqUp = Coin Spawn Rate up by 1.
+coinFreqUpMsg = Coin Spawn +1
 cToClose= Press C to close
 bushClue = It looks like some one ran out of ink trying \n to draw the bush near Bishop's library.
 noiseClue = A strange noise was heard \n near Hamilton Building.
