--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -1,11 +1,14 @@
 missingCoins = Pas assez d'or pour acheter: 
 speedMax = Votre vitesse est au maximum.
+coinFreqMax = La fréquence est déjà au maximum.
 coinCount = Or Totale: 
 name = Nom: 
 speedUp = Vitesse augmente par 1.
 speedUpMsg = Vitesse +1
 coinWorthUp = La valeure d'or augmente par 1.
 coinWorthUpMsg = Valeur d'Or +1
+coinFreqUp = Fréquence D'Or augmente par 1.
+coinFreqUpMsg = Fréquence D'Or +1
 cToClose = C pour fermer.
 bushClue = Quelqu'un semble avoir manqué d'encre \n en dessinant le buisson près \n de la bibliotheque de Bishop's.
 noiseClue = Un bruit bizarre s'est fait \n entendre au batiment Hamilton.
