Create new NPC for post-main game content with rewards.

--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -39,6 +39,12 @@ layachiPage1Line4 = Thank you for making me notice!
 layachiPage2Line1 = I will bring it to Nelly.
 layachiPage2Line2 = Congratulations on solving the mystery!
 layachiPage2Line3 = The treasure trail is now finished.
+mazehider1Page1Line1 = Hello, I'm surprised that you've found me!
+mazehider1Page1Line2 = I've been lost in this maze for a while,
+mazehider1Page1Line3 = thanks for finding me.
+mazehider1Page2Line1 = Here's a reward!
+mazehider1Page2Line2 =  
+mazehider1Page2Line3 = You're rewarded with 500 coins.
 needMoreClues1 = The bearded man will have more
 needMoreClues2 = to say later...
 space = [ Space ]
