--- a/src/StartMain/MessagesBundle_fr_CA.properties
+++ b/src/StartMain/MessagesBundle_fr_CA.properties
@@ -39,6 +39,12 @@ layachiPage1Line4 = merci de me l'avoir fait remarquer !
 layachiPage2Line1 = Je vais aller le donner à Nelly.
 layachiPage2Line2 = Felicitations pour avoir resolu le mystere !
 layachiPage2Line3 = La chasse au tresor est close.
+mazehider1Page1Line1 = Bonjour, je suis surpis que tu m'as trouvé!
+mazehider1Page1Line2 = Je me suis perdu pour une bonne montant de temps,
+mazehider1Page1Line3 = merci pour me trouvé.
+mazehider1Page2Line1 = Voila un remerciment!
+mazehider1Page2Line2 =  
+mazehider1Page2Line3 = Vous obtenez 500 pièces d'or.
 needMoreClues1 = L'homme avec une barbe noire aura
 needMoreClues2 = plus d'information plus tard.
 space = [ Espace ]
