Fix some of the bugs found (inifite coins, npc button).

--- a/src/StartMain/MessagesBundle_en_US.properties
+++ b/src/StartMain/MessagesBundle_en_US.properties
@@ -29,7 +29,7 @@ nellypage1line5 = I need to find the marker quickly !
 nellypage1line6 = Can you help me find it please ?
 nellypage1line7 =  It would be really appreciated !
 nellypage1line8 = You can press H at anytime for help!
-nellypage1line9 = Press N to talk with me again, or any other
+nellypage1line9 = Press Space to talk with me again, or any other
 nellypage1line10 = person also.
 nellypage1line11 = Good luck!
 layachiPage1Line1 = Wait... I think I have something
